--- a/artificial-intelligence/graph.yaml
+++ b/artificial-intelligence/graph.yaml
@@ -8,7 +8,8 @@ modified: 2025-01-07T22:12:46.729+00:00
 canvas:
     x: 0
     y: 0
-    library: material
+    library: material-symbols-rounded
+    icon: article
     size: 16
     fill: --blue
     stroke: null
