--- a/artificial-intelligence/graph.yaml
+++ b/artificial-intelligence/graph.yaml
@@ -2,19 +2,14 @@ _uuid: 45218f71-5d8b-45c8-9d77-4779a09970de
 _graph: 4920bb10-2b4f-47d8-af4d-9d6fe0c37992
 _type: permanent
 _visibility: public
-
 _created: 2025-01-04T21:57:36.111+00:00
 _modified: 2025-01-07T22:12:46.729+00:00
-
 _canvas:
-    x: 0
-    y: 0
-    library: material-symbols-rounded
-    icon: article
-    size: 16
-    fill: --primary
-    stroke: null
-
-_edges:
-  parent: []
-  sibling: []
+  x: 0
+  y: 0
+  library: material-symbols-rounded
+  icon: article
+  size: 16
+  fill: --primary
+  stroke: null
+_edges: []
