--- a/computer-science/graph.yaml
+++ b/computer-science/graph.yaml
@@ -14,6 +14,6 @@ _canvas:
   fill: --primary
   stroke: null
 _edges:
-  parent:
-    - 45218f71-5d8b-45c8-9d77-4779a09970de
-  sibling: []
+  - target: 45218f71-5d8b-45c8-9d77-4779a09970de
+    label: parent
+    weight: 1
