--- a/deep-learning/graph.yaml
+++ b/deep-learning/graph.yaml
@@ -14,6 +14,6 @@ _canvas:
   fill: --primary
   stroke: null
 _edges:
-  parent:
-    - d8b3028b-625e-49a1-b7a8-8cfd6b4d7571
-  sibling: []
+  - target: d8b3028b-625e-49a1-b7a8-8cfd6b4d7571
+    label: parent
+    weight: 1
