--- a/natural-language-processing/graph.yaml
+++ b/natural-language-processing/graph.yaml
@@ -14,6 +14,6 @@ _canvas:
   fill: --primary
   stroke: null
 _edges:
-  parent:
-    - cd10642c-a885-44ad-b990-9521739e4975
-  sibling: []
+  - target: cd10642c-a885-44ad-b990-9521739e4975
+    label: parent
+    weight: 1
